--- a/Proyecto 2/style.css
+++ b/Proyecto 2/style.css
@@ -1,15 +1,17 @@
 *{
     margin: 0;
     box-sizing: border-box;
+    font-family:"Montserrat";
+    
 }
 
 
 
 :root{
-    --fondo: #040404;
-    --clr-tarjeta:#1F1F1F;
-    --clr-texto:#96AE50;
-    --clr-enlaces:#333333;
+    --fondo: hsl(0, 0%, 8%);
+    --clr-tarjeta:hsl(0, 0%, 12%);
+    --clr-texto:hsl(75, 94%, 57%);
+    --clr-enlaces:hsl(0, 0%, 20%);
 
 }
 
@@ -17,27 +19,39 @@ body{
     background-color: var(--fondo);
     color: white;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
 
 .card{
-
-    width: 200px;
-    height: 370px;
+    border-radius: 1rem;
+    width: 25%;
+    height: 85%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border:1px solid white;
+    flex-direction: column;  
     background-color: var(--clr-tarjeta);
 }
 
 .card__upper{
-    
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
 }
+
+
 
 .upper__img{
     width: 100px;
+    margin: 2rem;
+    border-radius:50% ;
+}
 
+.upper__ubication{
+    color: var(--clr-texto);
+    font-size:1.2rem;
 
 }
