--- a/Proyecto 2/style.css
+++ b/Proyecto 2/style.css
@@ -40,9 +40,12 @@ body{
     justify-content: center;
     align-items: center;
     margin: 1rem;
+    height: 45%;
 }
 
-
+.upper__name{
+    font-size: 2rem;
+}
 
 .upper__img{
     width: 100px;
@@ -53,5 +56,45 @@ body{
 .upper__ubication{
     color: var(--clr-texto);
     font-size:1.2rem;
+
+}
+
+.card__lower{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 55%;
+    width: 100%;
+}
+
+.lower__list{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    
+}
+
+.list__button{
+    background-color: var(--clr-enlaces);
+    width: 80%;
+    padding: 0.5rem;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    transition: 1s;
+}
+
+.list__link{
+    text-decoration: none;
+    color:inherit;
+}
+
+.list__button:hover{
+transform: scale(1.1);
 
 }
