--- a/Proyecto 16/style.css
+++ b/Proyecto 16/style.css
@@ -1,19 +1,74 @@
 
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+html{
+    font-size: 62.5%;
 }
-.fondo{
-    position:fixed;
-    right: 0;
-    bottom:0;
-    min-width: 100%;
-    min-height: 100%;
-    width: 100vh;
-    height: 100vh;
-    object-fit: cover;
-    background-size: cover;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body{
+    font-family: "Montserrat";
+    font-size: 1.6rem;
     overflow: hidden;
+    width: 100%;
+    height: 100vh;
+}
+
+.layout{
+    position:relative;
+    height: 100vh;
+    width: 100vw;
+    
+}
+
+.layout__video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
+
+
+.layout__content{
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    color: white;
+    flex-direction: column;
+}
+
+.content__btn{
+    
+    text-decoration: none;
+    color: black;
+    font-size: 3rem;
+    font-weight: bold;   
+    padding: 1.5rem;
+    background-color: white;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.content__btn:hover{
+    transform: scale(1.1);
+    background-color: purple;
+    color: white;
+    box-shadow: 0 0 20px 5px rgba(128, 0, 128, 0.7);
+
+}
+
+.content__title{
+    font-size: 10rem;
+    padding: 2rem;
+    text-shadow: 0 0 1rem purple;
 
 }
